# deep_learning

./: GAN_Keras.ipynb  README.md  Text_Classification.ipynb  Text_Summarization.ipynb  assignment_1.ipynb  qq287531_assignment_02.ipynb  qq287531_assignment_03.ipynb
.ipynb_checkpoints/: GAN_Keras-checkpoint.ipynb  Text_Classification-checkpoint.ipynb  Text_Summarization-checkpoint.ipynb  assignment_1-checkpoint.ipynb  qq287531_assignment_02-checkpoint.ipynb  qq287531_assignment_03-checkpoint.ipynb
deep-learning-for-coders/: neural-net-foundations.ipynb  neural-net.ipynb  pyproject.toml
deep-learning-for-coders/deep_learning_for_coders.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
